[package]
name = "awak"
version = "0.2.13"
authors = ["cssivision <cssivision@gmail.com>"]
license = "MIT"
repository = "https://github.com/cssivision/awak"
homepage = "https://github.com/cssivision/awak"
description = "A small async runtime for Rust"
edition = "2018"

[dependencies]
once_cell = "1.8"
num_cpus = "1.13"
async-task = "4.0"
rand = "0.8"
libc = "0.2"
slab = "0.4"
socket2 = "0.4"
cfg-if = "0.1"
pin-project-lite = "0.2"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
