[package]
name = "awak"
version = "0.2.30"
authors = ["cssivision <cssivision@gmail.com>"]
license = "MIT"
repository = "https://github.com/cssivision/awak"
homepage = "https://github.com/cssivision/awak"
description = "A small async runtime for Rust"
edition = "2018"

[dependencies]
once_cell = "1.17"
async-task = "4.0"
rand = "0.8"
libc = "0.2"
slab = "0.4"
socket2 = { version = "0.5", features = ["all"] }
cfg-if = "1"
pin-project-lite = "0.2"
futures-io = "0.3"
futures-core = "0.3"
thread_local = "1.1"

[dev-dependencies]
futures-util = { version = "0.3", default-features = false, features = ["io"] }
